# SimpleAI

./: Cargo.toml  Makefile
src/: main.rs
src/modules/: components.rs  global.rs  platform.rs
src/modules/components/: node.rs  runtime_param.rs  search.rs  search_result.rs  static_param.rs  viewport.rs
src/modules/pages/: editor.rs  new.rs  search.rs
src/modules/platform/desktop/: window.rs
