[workspace]
resolver = "2"
members = [
  "packages/backend",
  "packages/frontend",
  "packages/macros",
  "packages/platforms/desktop",
  "packages/platforms/web"
]

[workspace.package]
version = "0.6.3"

[workspace.dependencies]
simple-ai-backend = { path = "packages/backend" }
simple-ai-frontend = { path = "packages/frontend" }
simple-ai-macros = { path = "packages/macros" }

dioxus = { version = "0.6.3" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


